Fixing an issue that causes hash anchors to scroll behind the navbar when clicked twice.
This happens because our theme uses a navbar-fixed-top.  See https://github.com/twbs/bootstrap/issues/1768

--HG--
branch : yt-3.0

--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -42,3 +42,11 @@ p code {
 tbody td.label {
     color: #000000;
 }
+
+*[id]:before { 
+  display: block; 
+  content: " "; 
+  margin-top: -45px; 
+  height: 45px; 
+  visibility: hidden; 
+}
